--- a/demos/httpd/index.html
+++ b/demos/httpd/index.html
@@ -21,5 +21,9 @@
         click me
         </button>
         </div>
+        <br>
+        <div>
+        <img src="img/mossad.jpg" />
+        </div>
     </BODY>
 </HTML>
